--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,16 @@
 <resources>
     <string name="app_name">MessageCardView</string>
+    <string name="username">User Name</string>
+    <string name="enter_username">Enter User Name</string>
+    <string name="password">Password</string>
+    <string name="enter_password">Enter Password</string>
+    <string name="email">Email</string>
+    <string name="enter_email">Enter Email Address</string>
+
+    <string name="forgot_password">Forget Password</string>
+    <string name="already_user">Aleady an User?</string>
+    <string name="not_user_yet">Not an User yet?</string>
+    <string name="login">Login</string>
+    <string name="register">Register</string>
+
 </resources>
