--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,18 +1,30 @@
 <resources>
-    <string name="app_name">MessageCardView</string>
-    <string name="username">User Name</string>
-    <string name="enter_username">Enter User Name</string>
-    <string name="password">Password</string>
-    <string name="enter_password">Enter Password</string>
-    <string name="email">Email</string>
-    <string name="enter_email">Enter Email Address</string>
+    <string name="app_name">"@News"</string>
 
-    <string name="forgot_password">Forgot Password</string>
-    <string name="already_user">Aleady an User? Login</string>
-    <string name="not_user_yet">Not an User yet? Register</string>
-    <string name="login">Login</string>
-    <string name="register">Register</string>
-    <string name="cancel">Cancel</string>
-    <string name="send">Send</string>
+    <string name="username">ユーザー名</string>
+    <string name="enter_username">ユーザー名を入力</string>
+    <string name="password">パスワード</string>
+    <string name="re_password">パスワードを再入力してください</string>
+    <string name="enter_password">パスワードを入力する</string>
+    <string name="email">Eメール</string>
+    <string name="re_email">Eメールを再入力</string>
+    <string name="enter_email">メールアドレスを入力してください</string>
+
+    <string name="forgot_password">パスワードをお忘れですか</string>
+    <string name="already_user">すでにユーザーですか？ ログイン</string>
+    <string name="not_user_yet">まだユーザーではありませんか？ 登録</string>
+    <string name="login">ログイン</string>
+    <string name="register">登録</string>
+    <string name="cancel">キャンセル</string>
+    <string name="send">送信</string>
+    <string name="domestic">国内</string>
+    <string name="international">国際</string>
+    <string name="business">経済</string>
+    <string name="entertainment">エンタメ</string>
+    <string name="sport">スポーツ</string>
+    <string name="science">科学</string>
+    <string name="life">ライフ</string>
+    <string name="local">地域</string>
+    <string name="magazine">雑誌</string>
 
 </resources>
