--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,7 +27,7 @@
     <string name="local">地域</string>
     <string name="magazine">雑誌</string>
     <string name="enderscore">_</string>
-    <string name="not_register_yet">まだ登録していない、ここで登録：</string>
+    <string name="not_register_yet">まだ登録していない、ここで登録：(登録すると、ソフトウェアのアップデート情報が送信されます。)</string>
     <string name="register_already">既に登録されていますか？ここでログイン：</string>
     <string name="refresh">リフレッシュ</string>
     <string name="share">ニュースを共有</string>
