add version control

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,6 +26,7 @@
     <string name="life">ライフ</string>
     <string name="local">地域</string>
     <string name="magazine">雑誌</string>
+    <string name="vedio">動画</string>
     <string name="enderscore">_</string>
     <string name="setting">設定</string>
     <string name="not_register_yet">まだ登録していない、ここで登録：(登録すると、ソフトウェアのアップデート情報が送信されます。)</string>
@@ -48,8 +49,13 @@
 
     <string name="first_name">姓</string>
     <string name="last_name">名</string>
-    <string name="gender"></string>
+    <string name="gender">性別</string>
     <string name="city">都市</string>
     <string name="age">年齢</string>
+
+    <string name="player_error">Error initializing YouTube player: %s</string>
+    <string name="seek_to">Jump To</string>
+    <string name="seek_to_hint">Seconds</string>
+    <string name="please_update_your_package">ご使用されているアプリが古いのですが、更新してください</string>
 
 </resources>
